--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,12 +21,8 @@
         <div id="header">
           <nav>
             <ul>
-              <li class="fork"><a href="/test/test.html">View On GitHub</a></li>
-              {% if site.show_downloads %}
-                <li class="downloads"><a href="{{ site.github.zip_url }}">ZIP</a></li>
-                <li class="downloads"><a href="{{ site.github.tar_url }}">TAR</a></li>
-                <li class="title">DOWNLOADS</li>
-              {% endif %}
+              <li class="navbutton"><a href="/test/test.html">About Me</a></li>
+              <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
             </ul>
           </nav>
         </div><!-- end header -->
