--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,8 +21,8 @@
         <div id="header">
           <nav>
             <ul>
-              <li class="fork"><a href="/test/test.html">About Me</a></li>
-              <li class="fork"><a href="/repo/repodir.html">Repository</a></li>
+              <li class="navbutton"><a href="/test/test.html">About Me</a></li>
+              <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
             </ul>
           </nav>
         </div><!-- end header -->
