--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -218,6 +218,7 @@ dt {
         &.navbutton {
           float: left;
           margin-left: 6px;
+        }
 
         &.downloads {
           float: right;
