--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,6 +19,7 @@
   </head>
     <body>
         <div id="header">
+          <p>"CrissCross's Cloud"</p>
           <nav>
             <ul>
               <li class="navbutton"><a href="/test/test.html">About Me</a></li>
