--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,7 @@
           <p>"CrissCross's Cloud"</p>
           <nav>
             <ul>
+              <li class="title"><p>CrissCross's Repository</p></li>
               <li class="navbutton"><a href="/test/test.html">About Me</a></li>
               <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
             </ul>
