--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -220,6 +220,10 @@ dt {
           margin-left: 6px;
         }
 
+        &.navtitle {
+          float: left;
+          left: 20px;
+
         &.downloads {
           float: right;
           margin-left: 6px;
