--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -223,7 +223,8 @@ dt {
         &.navtitle {
           float: left;
           left: 20px;
-
+        }
+        
         &.downloads {
           float: right;
           margin-left: 6px;
