--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -222,7 +222,7 @@ dt {
 
         &.navtitle {
           float: left;
-          left: 20px;
+          z-index: 0;
         }
         
         &.downloads {
