--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -222,7 +222,7 @@ dt {
 
         &.navtitle {
           float: left;
-          z-index: 0;
+          text-indent: -350px;
         }
         
         &.downloads {
