--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -222,6 +222,8 @@ dt {
 
         &.navtitle {
           float: left;
+          font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
+          font-size: 25px;
           text-indent: -350px;
         }
         
