--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -222,7 +222,7 @@ dt {
 
         &.navtitle {
           float: left;
-          font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif !important;
+          font-family: 'OpenSansLight', "Helvetica Neue", Helvetica, Arial, sans-serif;
           font-size: 25px;
           text-indent: -350px;
         }
