--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -208,6 +208,10 @@ dt {
             border: 1px solid #527f0e;
             box-shadow: inset 0px 1px 1px rgba(0,0,0,.2), 0px 1px 0px rgba(0,0,0,.0);
           }
+          
+          &.title {
+            background: 0;
+            border: 0;
         }
 
         &.fork {
