--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -212,6 +212,9 @@ dt {
           &.title {
             background: 0;
             border: 0;
+            background-color: 0;
+            box-shadow: 0;
+            
           }
         }
 
