--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
         <div id="header">
           <nav>
             <ul>
-              <li class="navtitle"><a style="all: unset;" class="title" href="/index.html">CrissCross's Cloud</a></li>
+              <li class="navtitle"><a style="all: unset; cursor: grab;" class="title" href="/index.html">CrissCross's Cloud</a></li>
               <li class="navbutton"><a href="/test/test.html">About Me</a></li>
               <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
             </ul>
