--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,6 +24,7 @@
               <li class="navtitle"><a style="all: unset; cursor: pointer;" class="title" href="/index.html">CrissCross's Cloud</a></li>
               <li class="navbutton"><a href="/test/test.html">About Me</a></li>
               <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
+              <li class="navbutton"><a href="/blog/index.html">Blog</a></li>
             </ul>
           </nav>
         </div><!-- end header -->
