--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -225,7 +225,7 @@ dt {
 
         &.navbutton {
           float: left;
-          margin-left: 20px;
+          margin-right: 20px;
         }
 
         &.navtitle {
