--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -41,6 +41,16 @@
 
       </section>
 
+      <section>
+          <ul>
+            {% for post in site.posts %}
+            <li>
+              <a href="{{ post.url }}">{{ post.title }}</a>
+            </li>
+          {% endfor %}
+         </ul>
+      </section>
+
     </div>
   </body>
 </html>
