--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -32,8 +32,8 @@
 
       <section>
         <div id="title">
-          <h1>{{ page.title }}</h1>
-          <p>{{ page.description }}</p>
+          <h1>{{ site.title }}</h1>
+          <p>{{ site.description }}</p>
           <hr>
         </div>
 
