--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -82,6 +82,12 @@ strong {
   padding: 0 20px;
 }
 
+.leftside {
+  max-width:650px;
+  position:relative;
+  padding:0 20px;
+} 
+
 section img {
   max-width: 100%;
 }
