--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -83,9 +83,11 @@ strong {
 }
 
 .leftside {
+  float:left;
   max-width:650px;
   position:relative;
   padding:0 20px;
+  margin-top: 70px;
 } 
 
 section img {
