--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -21,7 +21,7 @@
         <div id="header">
           <nav>
             <ul>
-              <li class="navtitle"><a style="all: unset; cursor: pointer; float:left;" class="title" href="/index.html">CrissCross's Cloud</a></li>
+              <li class="navtitle"><a style="all: unset; cursor: pointer;" class="title" href="/index.html">CrissCross's Cloud</a></li>
               <li class="navbutton"><a href="/test/test.html">About Me</a></li>
               <li class="navbutton"><a href="/repo/repodir.html">Repository</a></li>
               <li class="navbutton"><a href="/blog/index.html">Blog</a></li>
