--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,10 +16,6 @@
     <![endif]-->
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
     {% include head-custom.html %}
-    {{% assign nicedate = {{% assign d = page.date | date: "%-d" %}
-    {{ page.date | date: "%B" }} 
-    {% case d %}{% when "1" or "21" or "31" %}{{ d }}st{% when "2" or "22" %}{{ d }}nd{% when "3" or "23" %}{{ d }}rd{% else %}{{ d }}th{% endcase %}, 
-    {{ page.date | date: "%Y" }} }}
   </head>
     <body>
         <div id="header">
@@ -49,7 +45,10 @@
         <div id="title">
           <h1>{{ page.title }}</h1>
           <p>{{ page.description }}</p>
-          <p>{{ nicedate }}</p>
+          <p>{{% assign d = page.date | date: "%-d" %}
+    {{ page.date | date: "%B" }} 
+    {% case d %}{% when "1" or "21" or "31" %}{{ d }}st{% when "2" or "22" %}{{ d }}nd{% when "3" or "23" %}{{ d }}rd{% else %}{{ d }}th{% endcase %}, 
+    {{ page.date | date: "%Y" }}</p>
           <hr>
         </div>
 
