--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -45,7 +45,7 @@
         <div id="title">
           <h1>{{ page.title }}</h1>
           <p>{{ page.description }}</p>
-          <p>{{% assign d = page.date | date: "%-d" %}
+          <p>{% assign d = page.date | date: "%-d" %}
     {{ page.date | date: "%B" }} 
     {% case d %}{% when "1" or "21" or "31" %}{{ d }}st{% when "2" or "22" %}{{ d }}nd{% when "3" or "23" %}{{ d }}rd{% else %}{{ d }}th{% endcase %}, 
     {{ page.date | date: "%Y" }}</p>
