--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -43,8 +43,9 @@
           {% for post in site.posts %}
             <li>
               {{ post.date | date: "%-d %B %Y" }}
-              <a href="{{ post.url }}">{{ post.title }}</a>
-              {{ post.excerpt }}
+              <br>
+              <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
+              <h2>{{ post.excerpt }}</h2>
           </li>
           {% endfor %}
         </ul>
