--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -42,8 +42,7 @@
         <ul>
           {% for post in site.posts %}
             <li>
-              {{ post.date | date: "%-d %B %Y" }}
-              <br>
+              <p>{{ post.date | date: "%-d %B %Y" }}</p>
               <h2><a href="{{ post.url }}">{{ post.title }}</a></h2>
               <h2>{{ post.excerpt }}</h2>
           </li>
