--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -42,7 +42,7 @@
         <ul>
           {% for post in site.posts %}
             <li>
-              <p>{{ post.date | date: "%-d %B %Y" }}</p>
+              <p class="date">{{ post.date | date: "%-d %B %Y" }}</p>
               <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
               <h3>{{ post.excerpt }}</h3>
           </li>
