--- a/_sass/jekyll-theme-midnight.scss
+++ b/_sass/jekyll-theme-midnight.scss
@@ -18,6 +18,9 @@ h1, h2, h3, h4, h5, h6 {
   margin:0 0 10px;
   font-family: 'OpenSansRegular', "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: normal;
+  &.postlist{
+    margin: 0 0 5px;
+  }
 }
 
 p, ul, ol, table, pre, dl {
