--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -43,7 +43,7 @@
           {% for post in site.posts %}
             <li>
               <p class="date">{{ post.date | date: "%-d %B %Y" }}</p>
-              <h1><a href="{{ post.url }}">{{ post.title }}</a></h1>
+              <h1 class="postlist"><a href="{{ post.url }}">{{ post.title }}</a></h1>
               <h3>{{ post.excerpt }}</h3>
           </li>
           {% endfor %}
